--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Example</title>
-    </head>
-    <body>
-        <p>This is an example of a simple HTML page with one paragraph.</p>
-        
-        <p>Hello World.</p>
-    </body>
+  <head>
+    <title>My GitHub Pages Site</title>
+  </head>
+  <body>
+    <h1>Hello world!</h1>
+    <p>Welcome to my GitHub Pages site!</p>
+  </body>
 </html>
